# spelspell

./: .gitignore  Cargo.toml  README.md
src/: app.rs  assets.rs  input.rs  keymod.rs  main.rs  renderer.rs  types.rs
src/gamestate/: brains.rs  command.rs  legs.rs  mod.rs  physics.rs  time.rs  visual.rs
